# hearth-agents

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  blog-autonomous-dev-team.md  docker-compose.yml  ecosystem.config.cjs  lefthook.yml  package-lock.json  package.json
.github/workflows/: commitlint.yml
deploy/: hearth-agents.service
python/: Dockerfile  pyproject.toml
python/hearth_agents/: __init__.py  __main__.py  agent.py  archive_task.py  auto_label.py  backlog.py  bot.py  budget_alarm.py  ci_ingest.py  commitlint.py  config.py  cost_analytics.py  cost_tracker.py  debate.py  default_feature_templates.json  digest.py  drift_alarm.py  drift_canary.py  gc_worktrees.py  healer.py  heartbeat.py  idea_engine.py  kanban_html.py  logger.py  loop.py  main.py  mcp_server.py  memory.py  models.py  nightly_summary.py  notify.py  pr_review.py  prompt_analyzer.py  prompts.py  release_bot.py  replay.py  research_tracker.py  research_watch.py  sanitize.py  scheduler.py  (+9 more)
python/hearth_agents/tools/: __init__.py  a11y_audit.py  bisect_bench.py  classify_bump.py  env_profile.py  git_ops.py  kanban_ops.py  planner_tools.py  repo_search.py  scaffold.py  scaffold_contract_test.py  scaffold_i18n.py  scaffold_migration.py  scaffold_otel.py  scaffold_pbt.py  serper.py  shell.py  validate_acceptance_criteria.py  verify_staged.py  wikidelve.py  wikidelve_synthesize.py
python/tests/: test_analytics.py  test_backlog.py  test_cost_tracker.py  test_healer.py  test_small_units.py
scripts/: hearth
src/: bot.ts  main.ts
(+43 files in other folders)
